# inspect_dataset

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.claude/skills/inspect-dataset-audit/: SKILL.md
src/inspect_dataset/: __init__.py  _llm.py  _types.py  cli.py  loader.py  report.py  scanner.py
src/inspect_dataset/_view/: __init__.py  server.py
src/inspect_dataset/_view/www/: index.html  package-lock.json  package.json  vite.config.ts
src/inspect_dataset/_view/www/src/: App.tsx  api.ts  main.tsx  store.ts  types.ts
src/inspect_dataset/_view/www/src/components/: DatasetPicker.tsx  FindingDetail.tsx  FindingsList.tsx  Header.tsx  SamplesTab.tsx  ScannerSidebar.tsx
src/inspect_dataset/_view/www/src/hooks/: useKeyboard.ts
src/inspect_dataset/scanners/: __init__.py  ambiguity.py  answer_distribution.py  answer_length.py  answerability.py  binary_question_ratio.py  duplicate_questions.py  encoding_issues.py  forced_choice_leakage.py  image_mime_type.py  inconsistent_format.py  label_correctness.py
tests/: test_ambiguity.py  test_answer_distribution.py  test_answer_length.py  test_answerability.py  test_binary_question_ratio.py  test_duplicate_questions.py  test_encoding_issues.py  test_forced_choice_leakage.py  test_image_mime_type.py  test_inconsistent_format.py  test_label_correctness.py  test_load_inspect_task.py  test_report.py  test_view_e2e.py
tests/_fixtures/view_findings/: answer_length.json  duplicate_questions.json  inconsistent_format.json  samples.json  scan_summary.json
