[project]
name = "inspect-dataset"
version = "0.1.0"
description = "Dataset quality scanner for AI evaluation datasets"
readme = "README.md"
authors = [
    { name = "Matt Fisher", email = "m@ttfisher.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "datasets>=2.0",
]

[project.scripts]
inspect-dataset = "inspect_dataset.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
